# cieo

./: .gitignore  .gitmodules  CMakeLists.txt  compile_comands.json
scripts/: compress.sh
src/: graphics.hpp  main.cpp  stl.cpp  stl.hpp
src/graphics/: core.cpp  core.hpp  fragment.glsl  gl.hpp  gl_window.cpp  gl_window.hpp  glad.c  glad.h  obj.cpp  obj.hpp  object.cpp  object.hpp  shader.cpp  shader.hpp  shaders.hpp  vertex.glsl
